made drop-down list with 4 functions(delete, rename, changeDesc, removeDesc)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,19 @@
     <string name="tempCast">Заливка, \u2103</string>
     <string name="likvidAnsw">Ликвидус (Т начала кристализации), \u2103</string>
     <string name="tempInStove">Температура в печи, \u2103</string>
+
+    <string name="rename">Переименовать</string>
+    <string name="change_description">Изменить описание</string>
+    <string name="remove_description">Убрать описание</string>
+    <string name="remove">Удалить</string>
+
+    <string name="remove_item_window">Удалить из списка?</string>
+    <string name="remove_description_of_item_window">Убрать описание?</string>
+    <string name="rename_item_window">Введите новое название</string>
+    <string name="change_description_item_window">Введите новое описание</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="cancel">Отмена</string>
+    <string name="ready">Готово</string>
+    <string name="confirm">Подтверждение</string>
 </resources>
